# brp_exact

./: LICENSE  README.md  cmake_script_exact.sh  run_exact.sh
src_exact/: CMakeLists.txt  CostFunctionSBRP.h  DriverBRP.h  DriverCountBppLb.cpp  DriverCountBppLb.h  ExactBrp.cpp  ExactBrp.h  ExactBrpCallBacks.cpp  ExactBrpCallBacks.h  ExactBrpGraph.cpp  ExactBrpGraph.h  ExactBrpSepBase.h  ExactBrpSepCvrpsep.cpp  ExactBrpSepCvrpsep.h  ExactBrpSepUser.cpp  ExactBrpSepUser.h  InsRmvMethodSBRP.cpp  InsRmvMethodSBRP.h  LoadBRP.cpp  LoadBRP.h  Move.h  NodeBRP.h  Parameters.cpp  Parameters.h  ProblemDefinition.h  RouteFeasibility.cpp  RouteFeasibility.h  Solution.h  main_ex_brp.cpp
